--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using node.js <script>document.write(process.version)</script>.
-  </body>
+<head>
+    <meta charset="utf-8">
+    <title>Hello 3D World</title>
+    <link href="styles/main.css" rel="stylesheet">
+    <script src="js/Detector.js"></script>
+    <script src="js/three.min.js"></script>
+</head>
+<body>
+    <div class="close"></div>
+    <script src="js/cutting-board.js"></script>
+</body>
 </html>
