Load texture from image dragged-and-dropped.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <link href="styles/main.css" rel="stylesheet">
     <script src="js/Detector.js"></script>
     <script src="js/three.min.js"></script>
+
+    <style>
+    #holder { border: 10px dashed #ccc; width: 64px; height: 64px;}
+    #holder.hover { border: 10px dashed #333; }
+    </style>
 </head>
 <body>
     <div class="close"></div>
+
+    <div id="holder"></div>
+
     <script src="js/cutting-board.js"></script>
 </body>
 </html>
