--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello 3D World</title>
+    <title>cutting board</title>
     <link href="styles/main.css" rel="stylesheet">
     <script src="js/Detector.js"></script>
     <script src="js/three.min.js"></script>
-
-    <style>
-    #holder { border: 10px dashed #ccc; width: 64px; height: 64px;}
-    #holder.hover { border: 10px dashed #333; }
-    </style>
 </head>
 <body>
     <div class="close"></div>
